--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -103,7 +103,7 @@ label:focus {
     background-color: #000000;
 }
 
-#cpu, #temperature, #memory, #network, #pulseaudio, #clock, #mpd, #idle_inhibitor{
+#custom-media, #cpu, #temperature, #memory, #network, #pulseaudio, #clock, #mpd, #idle_inhibitor{
         margin-top: 5px;
 	padding-left: 10px;
 	margin-bottom: 0px;
@@ -111,7 +111,9 @@ label:focus {
 	border-radius: 40px;
 	color: @base;	
 }
-
+#custom-media { 
+	background-color: @green;
+}
 
 #cpu {
     background-color: @sapphire;
